<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.wliu.mr.demo</groupId>
  <artifactId>org.wliu.mr.demo</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
		<hadoop.version>2.6.0-cdh5.4.0</hadoop.version>
		<hbase.version>1.0.0-cdh5.4.0</hbase.version>
	</properties>
  
  <repositories>
    <repository>
      <id>cloudera</id>
      <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
    </repository>
    
  
 <repository>  
    <id>central</id>  
    <name>Maven Repository Switchboard</name>  
    <layout>default</layout>  
  <!--   <url>http://maven.apache.org</url> -->  
   <url>http://repo1.maven.org/maven2</url> 
    <snapshots>  
      <enabled>false</enabled>  
    </snapshots>  
  </repository>

  </repositories>
  <dependencies>
	<dependency>
		<groupId>org.apache.hadoop</groupId>
		<artifactId>hadoop-mapreduce-client-core</artifactId>
		<version>${hadoop.version}</version>
	</dependency>
	<dependency>
		<groupId>org.apache.hadoop</groupId>
		<artifactId>hadoop-common</artifactId>
		<version>${hadoop.version}</version>
	</dependency>
	<dependency>
		<groupId>org.apache.hadoop</groupId>
		<artifactId>hadoop-hdfs</artifactId>
		<version>${hadoop.version}</version>
	</dependency>
	<dependency>
		<groupId>org.apache.hadoop</groupId>
		<artifactId>hadoop-mapreduce-client-jobclient</artifactId>
		<version>${hadoop.version}</version>
	</dependency>
	<dependency>
		<groupId>org.apache.hadoop</groupId>
		<artifactId>hadoop-mapreduce-client-common</artifactId>
		<version>${hadoop.version}</version>
	</dependency>
	<dependency>
		<groupId>org.apache.hadoop</groupId>
		<artifactId>hadoop-mapreduce-client-shuffle</artifactId>
		<version>${hadoop.version}</version>
	</dependency>
	<dependency>
		<groupId>org.apache.hadoop</groupId>
		<artifactId>hadoop-mapreduce-client-app</artifactId>
		<version>${hadoop.version}</version>
	</dependency>
  	<dependency>
  		<groupId>org.apache.avro</groupId>
  		<artifactId>avro-mapred</artifactId>
  		<version>1.7.4</version>
  	</dependency>
  	
  	<!-- Hbase -->
  	<dependency>
  		<groupId>org.apache.hbase</groupId>
  		<artifactId>hbase-client</artifactId>
		<version>${hbase.version}</version>
  	</dependency>

  	<dependency>
  		<groupId>org.apache.hbase</groupId>
  		<artifactId>hbase-server</artifactId>
		<version>${hbase.version}</version>
  	</dependency>
  	
  	<!-- for hbase minicluster testing -->
  	<dependency>
  		<groupId>org.apache.hbase</groupId>
  		<artifactId>hbase-testing-util</artifactId>
		<version>${hbase.version}</version>
		<scope>provided</scope>
  	</dependency>
  	
  	<!-- junit4 -->
  		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
  	
  	<!-- mapreduce mrunit -->
  	<dependency>
  		<groupId>org.apache.mrunit</groupId>
  		<artifactId>mrunit</artifactId>
  		<version>1.1.0</version>
  		<classifier>hadoop2</classifier>
  		<scope>test</scope>
	</dependency>
  	
  	<!-- minicluster -->
  	<dependency>
		<groupId>org.apache.hadoop</groupId>
		<artifactId>hadoop-minicluster</artifactId>
		<version>${hadoop.version}</version>
		<type>jar</type>
		<scope>test</scope>
	</dependency>
  	
  	<dependency>
    <groupId>jdk.tools</groupId>
    <artifactId>jdk.tools</artifactId>
    <version>1.7</version>
    <scope>system</scope>
    <systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
</dependency>
  </dependencies>
  
  <build>
  	<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		
			<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.7</source>
						<target>1.7</target>
					</configuration>
				</plugin>
				<!-- 
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
					</configuration>
				</plugin>
				 -->
			</plugins>
		</pluginManagement>
  </build>
</project>
